# GOAST-SQP-Solver

./: .gitignore  CMakeLists.txt  README.md  test.py
.cache/clangd/index/: Admissibility.h.A00B7357795DC5B1.idx  ArcFoldOptimization.cpp.1981C3A37D7E6A95.idx  ArcFoldOptimizationInterpolation.cpp.B133B6E72DBD905D.idx  ArcFoldOptimizationInterpolation2.cpp.543AA9049364F936.idx  Auxiliary.h.1AF1A1601E5CB557.idx  AuxiliaryFunctions.h.6B9C5B9728645DFB.idx  BaseOpInterface.h.8C61289A008FDBB7.idx  BoundaryDOFS.h.06DC8BF4DA7109C5.idx  BoundaryDOFS_quad.h.F6B04FBB4B79A47F.idx  ByrdOmojokunSQP.h.5F1EC9520363C478.idx  CholmodInterface.h.A5AE9E74C7E711D5.idx  Configurators.h.7712A03C5ED7B6F3.idx  ConstraintSqrdReducedTest.cpp.9BB77533318CE965.idx  ConstraintTest.cpp.DFE3C87408171157.idx  Constraints.h.59CB0B166B5B9ECF.idx  Constraints.h.F8A7112628A87540.idx  ConvexGeodesicCombination.h.FF5A3424FE40381C.idx  Core.h.FA2193D6E255B17A.idx  CostFunctional.h.1B9993E6C9D53D5F.idx  CrossFoldInterpolation.cpp.ECDD518D2F30C67E.idx  CrossFoldInterpolationOptimization.cpp.705393752E5CD258.idx  CrossFoldInterpolationTest.cpp.B6552ADF1D894140.idx  CrossFoldNewton.cpp.380EF52F2E56EE01.idx  DeformationInterface.h.E1E0662AEFA645C6.idx  DeformationTransfer.h.69828864B3853CFE.idx  DerivativeTests.h.DBFA4F72710CE07B.idx  Developability.h.412285A81AD32E47.idx  DevelopabilityCentroidEnergy.h.063B51D11B3D652E.idx  DirectReconstruction.h.901750305A925A49.idx  DirichletEnergy.cpp.F9069A60E7BCA2FC.idx  DirichletEnergy.h.B2CAFB7931DAB48C.idx  DiscreteGeodesicCalculus.h.2B9F52D2A7A001E3.idx  DiscreteShells.h.612437CC51EADCB1.idx  DissipationModes.h.72CA879D05C53942.idx  DistanceMatrix.h.647886ECAD18EC85.idx  DualEdgeLengthFunctional.h.5681211EFE04155C.idx  EdgeLengthEnergy.h.55D29B5CA808666A.idx  EdgeLengthFunctional.h.C0B9AA5D5F2233EC.idx  EigenIncludes.h.EC3D5E7D94110705.idx  ElasticMean.h.814126FA779AF290.idx  (+142 more)
cmake/: GOAST.cmake
cmake/Modules/: FindEigen3.cmake  FindOpenMesh.cmake  FindSuiteSparse.cmake
data/plate/: SkewedCrossFoldInitPlate.ply  basePlateSharpCreaseDevelopability_coarse.ply  deformedPlateSharpCreaseDevelopability.ply  finalized.ply  meshCrossOptimization.ply  new_shit.ply  paperCrissCross_coarse.ply  paperCrissCross_coarse_coarse.ply  paperCrissCross_refined.ply  paperCrissCross_test.ply  paperCrissCross_transformed.ply  plate4SD_quads.ply  plate_def.ply  quadMesh.ply  quadMesh2.ply  quadMesh2_coarse_coarse.ply  quadMesh2_refined.ply  quadMesh3.ply  quadMesh_coarse.ply  quadMesh_handmade_2.ply  quadTest.ply  rectangle_criss_cross.ply  rectangle_criss_cross_coarse.ply  test.ply  testDevelopabilityBdry.ply  testDevelopabilityBdry2.ply  testDevelopabilityCylinder.ply  testDevelopabilityCylinder_fine.ply  testMesh.ply  testMesh2.ply  testMesh2_fine.ply  testMesh2_fine_fine.ply  testMesh3.ply  testMesh4.ply  testMeshCrissCross.ply  testPenalty.ply  testPlateDevelopability.ply
examples/: CMakeLists.txt  DirichletEnergy.cpp  gravitationBending.cpp  plotBendingContributions.cpp  simpleExample.cpp  simpleExample_clamped.cpp  testBLASLAPACK.cpp
examples/CrossFold/: CrossFoldNewton.cpp
examples/FoldOptimization/: ArcFoldOptimization.cpp  ArcFoldOptimizationInterpolation.cpp  ArcFoldOptimizationInterpolation2.cpp  Arena.h  BlockSparseMatrix.h  BoundaryDOFS.h  CostFunctional.h  CrossFoldInterpolation.cpp  CrossFoldInterpolationOptimization.cpp  CrossFoldInterpolationTest.cpp  FoldDofs.h  FoldDofsCrossTest.cpp  Merit.h  ObjectFactory.h  QP.h  SQP.h  SimpleFoldOptimization.cpp  SimpleFoldOptimization2.cpp  SkewedCrossFold.cpp  SkewedCrossFoldOptimization.cpp  SparseMat.h  Test.cpp  Tester2.cpp  ToyExample.cpp  ToyExampleCross.cpp  ToyExampleFreeArcLine.cpp  ToyExampleFreeLine.cpp  ToyExampleNewton.cpp  ToyExample_save.cpp  results.txt  test.cpp  test.h  test.py
examples/FoldOptimization/FoldDofDerivTests/: CostFunctionalPenaltyTest.cpp  FoldArcLineTest.cpp  FoldDofsSkewedCrossTest.cpp
examples/FoldOptimization/Tests/: D2E_dt.h  Tester.cpp  test.py
examples/GravitationBending/: gravitationBending.cpp
examples/QuadMeshExamples/: ConstraintSqrdReducedTest.cpp  ConstraintTest.cpp  Constraints.h  DevelopabilityOptimization.cpp  LMTest.cpp  Levenberg_Marquardt.h  QuadElasticEnergyTest.cpp  QuadEnergies.h  QuadGradientDescent.cpp  QuadMeshTest.cpp  QuadMeshTest2.cpp  SharpCreaseDevelopability.cpp  SharpCreaseDevelopability2.cpp  TestBoundaryDOFS.cpp  TestClasses.h  TestConstraintHess.cpp  ToyExampleDevelopability.cpp  ToyExampleDevelopabilityCylinder.cpp  bendingFoldQuadDevelopability.cpp  bendingFoldQuadDevelopability2.cpp  bendingFoldQuadReduced.cpp  bendingFoldQuadReduced2.cpp  idea.txt
examples/QuadMeshExamples/plotting/: gauss_image.py  gauss_image_data_begin.txt  gauss_image_data_final.txt  generate_blender_normals_json.py  generate_blender_rulings.py  generate_blender_rw_edges.py  generate_blender_rw_rulings.py  normal-field.json  normal-field_cylinder_fine.json  normals.txt  normals_new.txt  normals_newest.txt  rw-rulings-field_1.json  rw-rulings-field_1_cylinder_fine.json  rw-rulings-field_2.json  rw-rulings-field_2_cylinder_fine.json  rw_rulings.txt  rw_rulings_new.txt  rw_rulings_newest.txt
examples/SimpleFold/: bendingFold.cpp
examples/SingleArcCrease/: bendingFoldParamDirichlet.cpp  bendingFoldParamDirichletFoldClass.cpp  bendingFoldParamDirichlet_scaled.cpp  bendingFoldParamInterpolation.cpp  description.txt  save.txt
examples/SkewedCompression/: bendingSkewedCompression.cpp  bendingSkewedCompression2.cpp
examples/SmallArc/: bendingSmallArc.cpp  bendingSmallArcInterpolation.cpp
include/goast/: DiscreteShells.h  Quads.h  SQP.h  Smoothers.h
include/goast/Core/: Auxiliary.h  DerivativeTests.h  IO.h  Topology.h
include/goast/Developability/: BoundaryDOFS_quad.h  Constraints.h  Constraints_save.h  Constraints_test.h  Developability.h  DevelopabilityCentroidEnergy.h  ElasticCentroidEnergies.h  Levenberg_Marquardt.h
include/goast/DiscreteShells/: GravitationalBendingEnergy.h  GravitationalEnergy.h  HyperelasticMembraneEnergy.h  SimpleBendingEnergy.h
include/goast/Folds/: Fold.cpp  (+1 more)
(+24 files in other folders)
